Fix: scrollbar in reviews section text

--- a/css/style.css
+++ b/css/style.css
@@ -1113,7 +1113,7 @@ img {
 }
 
 .reviews-slider__text {
-  margin: 26px 0 0 0;
+  margin: 25px 0 0 0;
   max-width: 537px;
   height: 100%;
   font-family: "Mulish", sans-serif;
@@ -1558,7 +1558,7 @@ img {
     margin-top: 11px;
   }
   .reviews-slider__text {
-    margin: 27px 0 0 0;
+    margin: 22px 0 0 0;
   }
   .reviews-slider__button {
     top: 57%;
