--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -88,7 +88,7 @@
       &__username
         margin-top: 11px
       &__text
-        margin: 27px 0 0 0
+        margin: 22px 0 0 0
       &__button
         top: 57%
         transform: translateY(-56%)
