--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -67,7 +67,7 @@
       +Mulish(normal, 10px)
       color: $text-color
     &__text
-      margin: 26px 0 0 0
+      margin: 25px 0 0 0
       max-width: 537px
       height: 100%
       +Mulish(normal, 12px)
